Hopefully fix weird image scaling on IOS
why does mac scale horizontally before vertically? are they stupid?

--- a/Shared/main.css
+++ b/Shared/main.css
@@ -99,6 +99,7 @@ img{
 .project-img{
     height: 100%;
     object-fit: contain;
+    max-width: 100%;
 }
 
 .div-for-project-image{
